2010-10-21  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/wcoll.c :
	  Allow '-' to mean stdin for read_wcoll().

	* src/common/split.c :
	  Allow multiple sets of brackets in list_split as was done
	  for hostlist.c.

2010-10-19  Mark Grondona <mgrondona@llnl.gov>

	* Makefile.am, configure.ac, tests/* :
	  Add new pdsh testsuite based on the test-lib.sh from Git.
	  See tests/README for more information.

	* src/pdsh/main.c :
	  Allow PDSH_MODULE_DIR to override pdsh_module_dir iff pdsh
	  is not running as root and isn't running setuid. This will be
	  used mostly for testing purposes.

	* src/modules/slurm.c :
	  Only target running jobs with -j all (not completed for example)

	* Makefile.am, configure.ac, testsuite/* :
	  Remove dejagnu based testsuite.

2010-10-04  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/privsep.c, src/pdsh/privsep.h :
	  Switch to rresvport_af.

	* src/pdsh/mod.c :
	  Fix reference of uninitialized modules, especially during
	  options processing.

2010-09-29  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_exec.m4 :
	  Fix references to SSH in AC_EXEC

	* scripts/dshbak :
	  Fix googlecode issue 5 reported by Mattias Slabanja,
	  where dshbak was failing to coalesce differently zero-padded
	  hosts with -c.

2010-09-13  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_dshgroup.m4, configure :
	  Update --with-dshgroups help string to match other
	  configure --help output. Fix missing ','.

	* src/pdsh/mod.h, src/pdsh/mod.c, src/pdsh/opt.c :
	  Don't unload conflicting (uninitialized) modules, instead
	  keep them for -V and -L output, and mark then as conflicting
	  to avoid confusion.

	* src/pdsh/rcmd.c, src/pdsh/opt.c :
	  Fix a couple of compiler warnings.

2010-09-10  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/Makefile.am, src/modules/Makefile.in :
	  Use 'target_la_CPPFLAGS' instead of AM_CPPFLAGS for
	  per-module CPPFLAGS.

	* src/modules/torque.c :
	  Error in pbs_disconnect() shouldn't be fatal.
