@@ -1,5 +1,12 @@
 2010-10-21  Mark Grondona <mgrondona@llnl.gov>
 
+	* tests/t0003-wcoll.sh :
+	  Add tests for regex(/), hostfile(^), and exclusion(-) 
+	  syntax for -w (and -x).
+
+	* src/pdsh/opt.c :
+	  Initial regex and wcoll file support for -w and -x.
+
 	* src/pdsh/wcoll.c :
 	  Allow '-' to mean stdin for read_wcoll().
 
